[gd_scene load_steps=6 format=3 uid="uid://cng6ob8g1p3qb"]

[ext_resource type="PackedScene" uid="uid://dqyhv4jdfx0r3" path="res://scenes/nodo.tscn" id="1_744k8"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_kwohr"]
[ext_resource type="Texture2D" uid="uid://cnvw7ld46c7wt" path="res://fondo.png" id="4_peqtc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xr803"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yky1h"]
texture = ExtResource("4_peqtc")

[node name="Main" type="Node2D"]
script = ExtResource("1_kwohr")

[node name="Agregar" type="Button" parent="."]
offset_left = 1383.0
offset_top = 416.0
offset_right = 1484.0
offset_bottom = 454.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xr803")
text = "AÃ±adir Dato"

[node name="Label" type="Label" parent="."]
offset_left = 451.0
offset_top = 15.0
offset_right = 747.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 35
text = "Proyecto Ciencias"

[node name="raiz" parent="." instance=ExtResource("1_744k8")]
position = Vector2(569, 134)

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 1228.0
offset_top = 65.0
offset_right = 1512.0
offset_bottom = 349.0
columns = 8
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label14" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label15" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label16" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label17" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label18" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label19" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label20" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label21" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label22" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label23" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label24" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label25" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label26" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label27" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label28" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label29" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label30" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label31" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label32" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label33" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label34" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label35" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label36" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label37" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label38" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label39" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label40" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label41" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label42" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label43" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label44" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label45" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label46" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label47" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label48" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label49" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label50" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label51" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label52" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label53" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label54" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label55" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label56" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label57" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label58" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label59" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label60" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label61" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label62" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label63" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label64" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yky1h")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Eliminar" type="Button" parent="."]
offset_left = 1384.0
offset_top = 468.0
offset_right = 1511.0
offset_bottom = 507.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xr803")
text = "Eliminar Dato"

[node name="Dato" type="TextEdit" parent="."]
offset_left = 1240.0
offset_top = 419.0
offset_right = 1351.0
offset_bottom = 453.0
placeholder_text = "Dato..."
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true

[node name="Dato_E" type="TextEdit" parent="."]
offset_left = 1240.0
offset_top = 472.0
offset_right = 1352.0
offset_bottom = 506.0
placeholder_text = "Dato..."
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true

[node name="Nodo3" parent="." instance=ExtResource("1_744k8")]
position = Vector2(281, 254)

[node name="Nodo4" parent="." instance=ExtResource("1_744k8")]
position = Vector2(857, 249)

[node name="Nodo5" parent="." instance=ExtResource("1_744k8")]
position = Vector2(152, 342)

[node name="Nodo6" parent="." instance=ExtResource("1_744k8")]
position = Vector2(432, 347)

[node name="Nodo7" parent="." instance=ExtResource("1_744k8")]
position = Vector2(710, 351)

[node name="Nodo8" parent="." instance=ExtResource("1_744k8")]
position = Vector2(983, 348)

[node name="Nodo9" parent="." instance=ExtResource("1_744k8")]
position = Vector2(76, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo10" parent="." instance=ExtResource("1_744k8")]
position = Vector2(219, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo11" parent="." instance=ExtResource("1_744k8")]
position = Vector2(361, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo12" parent="." instance=ExtResource("1_744k8")]
position = Vector2(503, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo13" parent="." instance=ExtResource("1_744k8")]
position = Vector2(641, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo14" parent="." instance=ExtResource("1_744k8")]
position = Vector2(779, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo15" parent="." instance=ExtResource("1_744k8")]
position = Vector2(919, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo16" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1061, 438)
scale = Vector2(0.9, 0.9)

[node name="Nodo17" parent="." instance=ExtResource("1_744k8")]
position = Vector2(42, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo18" parent="." instance=ExtResource("1_744k8")]
position = Vector2(111, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo19" parent="." instance=ExtResource("1_744k8")]
position = Vector2(181, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo20" parent="." instance=ExtResource("1_744k8")]
position = Vector2(253, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo21" parent="." instance=ExtResource("1_744k8")]
position = Vector2(326, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo22" parent="." instance=ExtResource("1_744k8")]
position = Vector2(394, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo23" parent="." instance=ExtResource("1_744k8")]
position = Vector2(465, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo24" parent="." instance=ExtResource("1_744k8")]
position = Vector2(534, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo25" parent="." instance=ExtResource("1_744k8")]
position = Vector2(606, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo26" parent="." instance=ExtResource("1_744k8")]
position = Vector2(675, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo27" parent="." instance=ExtResource("1_744k8")]
position = Vector2(745, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo28" parent="." instance=ExtResource("1_744k8")]
position = Vector2(813, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo29" parent="." instance=ExtResource("1_744k8")]
position = Vector2(885, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo30" parent="." instance=ExtResource("1_744k8")]
position = Vector2(955, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo31" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1025, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo32" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1096, 507)
scale = Vector2(0.8, 0.8)

[node name="Nodo33" parent="." instance=ExtResource("1_744k8")]
position = Vector2(23, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo34" parent="." instance=ExtResource("1_744k8")]
position = Vector2(58, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo35" parent="." instance=ExtResource("1_744k8")]
position = Vector2(94, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo36" parent="." instance=ExtResource("1_744k8")]
position = Vector2(130, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo37" parent="." instance=ExtResource("1_744k8")]
position = Vector2(165, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo38" parent="." instance=ExtResource("1_744k8")]
position = Vector2(201, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo39" parent="." instance=ExtResource("1_744k8")]
position = Vector2(237, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo40" parent="." instance=ExtResource("1_744k8")]
position = Vector2(273, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo41" parent="." instance=ExtResource("1_744k8")]
position = Vector2(309, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo42" parent="." instance=ExtResource("1_744k8")]
position = Vector2(344, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo43" parent="." instance=ExtResource("1_744k8")]
position = Vector2(379, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo44" parent="." instance=ExtResource("1_744k8")]
position = Vector2(413, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo45" parent="." instance=ExtResource("1_744k8")]
position = Vector2(447, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo46" parent="." instance=ExtResource("1_744k8")]
position = Vector2(482, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo47" parent="." instance=ExtResource("1_744k8")]
position = Vector2(517, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo48" parent="." instance=ExtResource("1_744k8")]
position = Vector2(552, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo49" parent="." instance=ExtResource("1_744k8")]
position = Vector2(587, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo50" parent="." instance=ExtResource("1_744k8")]
position = Vector2(622, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo51" parent="." instance=ExtResource("1_744k8")]
position = Vector2(657, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo52" parent="." instance=ExtResource("1_744k8")]
position = Vector2(692, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo53" parent="." instance=ExtResource("1_744k8")]
position = Vector2(727, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo54" parent="." instance=ExtResource("1_744k8")]
position = Vector2(762, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo55" parent="." instance=ExtResource("1_744k8")]
position = Vector2(797, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo56" parent="." instance=ExtResource("1_744k8")]
position = Vector2(832, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo57" parent="." instance=ExtResource("1_744k8")]
position = Vector2(867, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo58" parent="." instance=ExtResource("1_744k8")]
position = Vector2(903, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo59" parent="." instance=ExtResource("1_744k8")]
position = Vector2(938, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo60" parent="." instance=ExtResource("1_744k8")]
position = Vector2(974, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo61" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1010, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo62" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1045, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo63" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1079, 573)
scale = Vector2(0.7, 0.7)

[node name="Nodo64" parent="." instance=ExtResource("1_744k8")]
position = Vector2(1113, 573)
scale = Vector2(0.7, 0.7)

[connection signal="pressed" from="Agregar" to="." method="_on_agregar_pressed"]
[connection signal="pressed" from="Eliminar" to="." method="_on_eliminar_pressed"]
